# ndev-sampledata

./: README.md  pyproject.toml
.github/workflows/: test_and_deploy.yml
src/ndev_sampledata/: __init__.py  _sample_data.py  napari.yaml
src/ndev_sampledata/samples/: neocortex-3Ch.tiff  scratch-assay-labeled-10T-2Ch.tiff
