[project]
name = "ndev-sampledata"
dynamic = ["version"]
description = "Sample data for the ndev kit"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
  {name = "Tim Monko"},
  {email = "timmonko@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.10"
# napari can be included in dependencies if napari imports are required.
# However, you should not include napari[all], napari[qt],
# or any other Qt bindings directly (e.g. PyQt5, PySide2).
# See best practices: https://napari.org/stable/plugins/building_a_plugin/best_practices.html
dependencies = [
    "bioio",
    "bioio-imageio",
    "bioio-ome-tiff",
]

[project.optional-dependencies]
# Allow easily installation with the full, default napari installation
# (including Qt backend) using ndev-sampledata[all].
all = ["napari[all]"]
testing = [
    "napari",
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
]

[project.entry-points."napari.manifest"]
ndev-sampledata = "ndev_sampledata:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/ndev-kit/ndev-sampledata/issues"
"Documentation" = "https://github.com/ndev-kit/ndev-sampledata#README.md"
"Source Code" = "https://github.com/ndev-kit/ndev-sampledata"
"User Support" = "https://github.com/ndev-kit/ndev-sampledata/issues"

[build-system]
requires = ["setuptools>=77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]
write_to = "src/ndev_sampledata/_version.py"
fallback_version = "0.0.1+nogit"

[tool.ruff]
line-length = 79
format.quote-style = "single"
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. handled by formatter
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
]
fix = true
